# kmt

./: .gitignore  CHANGES.md  Dockerfile  LICENSE.txt  README.md  TODO.md  dune-project  kmt.opam
.github/workflows/: build.yml
src/: addition.ml  boolean.ml  common.ml  decide.ml  driver.ml  dune  eval.ml  incnat.ml  kat.ml  kmt.ml  kmt_eval.ml  main.ml  network.ml  product.ml  test_equivalence.ml  toggle.ml
