(rule
 (target kmt)
 (action (copy %{exe:main.exe} %{target})))

(rule
 (target eval)
 (action (copy %{exe:eval.exe} %{target})))

(rule
 (target toggle)
 (action (copy %{exe:toggle.exe} %{target})))

(rule
 (target test_equivalence)
 (action (copy %{exe:test_equivalence.exe} %{target})))

(rule
 (target test_word)
 (action (copy %{exe:test_word.exe} %{target})))

; actual build rules

(executable
 (name main)
 (modules main)
 (libraries z3 kmt fmt fmt.cli fmt.tty logs logs.fmt logs.cli cmdliner)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(executable
 (name eval)
 (modules eval)
 (libraries z3 kmt ANSITerminal)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(executable
 (name toggle)
 (modules toggle)
 (libraries z3 kmt ANSITerminal)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(test
 (name test_equivalence)
 (modules test_equivalence)
 (libraries z3 kmt alcotest)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(test
 (name test_word)
 (modules test_word)
 (libraries kmt alcotest)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(library
 (name kmt)
 (wrapped false)
 (modules :standard \ main test_equivalence test_word eval toggle)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (libraries batteries str unix ANSITerminal fmt fmt.cli fmt.tty
            alcotest logs logs.fmt logs.cli z3))

(ocamllex lexer)             
(ocamlyacc parser)

(env
  (dev
    (flags (:standard -warn-error +A-9-32))))
