(executable
 (name kmt)
 (public_name kmt)
 (modules kmt)
 (libraries z3 kmt fmt fmt.cli fmt.tty logs logs.fmt logs.cli cmdliner)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(executable
 (name kmt_eval)
 (public_name kmt_eval)
 (modules kmt_eval)
 (libraries z3 kmt ANSITerminal fmt fmt.cli fmt.tty logs logs.fmt logs.cli cmdliner)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(test
 (name test_equivalence)
 (modules test_equivalence)
 (libraries z3 kmt alcotest)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(test
 (name test_word)
 (modules test_word)
 (libraries kmt alcotest)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (flags -thread (-cclib -lstdc++)))

(library
 (name kmt)
 (wrapped false)
 (modules (:standard \ kmt test_equivalence test_word kmt_eval))
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))             
 (libraries batteries str unix ANSITerminal fmt fmt.cli fmt.tty
            alcotest logs logs.fmt logs.cli cmdliner z3))

(ocamllex lexer)             
(ocamlyacc parser)

(env
  (dev
    (flags (:standard -warn-error +A-9-32))))
